--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         "bramus/router": "1.5"
     },
     "autoload": {
-        "psr-4": {"App\\": "./src/"}
+        "psr-4": {"App\\": "src"}
     },
     "authors": [
         {
